# PicoMixController

./: .env.example  .gitignore  CMakeLists.txt  README.md  example.c  main.c  pico-debug.cfg
Knob/: CMakeLists.txt  example.c  example2.c  example3.c  example4_Both.c  example5.c
VL53L1X-C-API-Pico/: LICENSE  README.md
buzzer/: buzzer.py  buzzertask.c  buzzertask.h
display/: animationtask.c  animationtask.h  image.h  renderer.c  renderer.h
display/menu-screens/: convert.sh  tohexdump.sh
include/: FreeRTOSConfig.h
input/: inputhandler.c  inputhandler.h
networking/: httpclient.c  httpclient.h
pumps/: pumptask.c  pumptask.h
rfid/: mfrc522.c  mfrc522.h  rfid-spi.c  rfid-spi.h  rfidtask.c  rfidtask.h
toftask/: toftask.c  toftask.h
utils/: GlobalState.c  GlobalState.h  helper.c  helper.h
